[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/options.gd" type="Script" id=1]
[ext_resource path="res://sprites/menu_container64x256px.png" type="Texture" id=2]
[ext_resource path="res://fonts/Pixellari28px.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Pixellari46px.tres" type="DynamicFont" id=4]

[node name="options" type="Control"]
margin_right = 800.0
margin_bottom = 450.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 800.0
margin_bottom = 450.0
texture = ExtResource( 2 )
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="option_font_size" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -774.0
margin_top = 106.0
margin_right = -659.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
text = "Font Size"

[node name="font_slider" type="HSlider" parent="option_font_size"]
margin_left = 4.0
margin_top = 52.0
margin_right = 147.0
margin_bottom = 68.0
min_value = 1.0
max_value = 1.5
step = 0.05
value = 1.0

[node name="font_static_text" type="Label" parent="option_font_size"]
margin_left = 3.0
margin_top = 102.0
margin_right = 196.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 3 )
text = "Static Font Size"

[node name="font_short_lived_text" type="Label" parent="option_font_size"]
margin_left = 3.0
margin_top = 186.0
margin_right = 421.0
margin_bottom = 231.0
custom_fonts/font = ExtResource( 4 )
text = "Short-lived Font Size"

[node name="Button" type="Button" parent="."]
margin_left = 26.0
margin_top = 26.0
margin_right = 183.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "Title Screen"
[connection signal="value_changed" from="option_font_size/font_slider" to="." method="_on_font_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
